Fixed some things

--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    !-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-0">
         <a class="navbar-brand" href="./index.html"> <img src="./images/primary_white.png" width="6%" height="auto" class="img-fluid" alt="Responsive Image">Berea College Computer Science Department</a>
 
@@ -53,7 +53,7 @@
             </ul>
         </div>
     </nav>
-    !-- Jumbotron for "Fall 2018 Courses" -->
+    <!-- Jumbotron for "Fall 2018 Courses" -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Fall 2018 Courses</h1>
@@ -169,7 +169,7 @@
             </div>
         </div>
     </div>
-    !-- Jumbotron for "Spring 2019 Courses" -->
+    <!-- Jumbotron for "Spring 2019 Courses" -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Spring 2019 Courses</h1>
