--- a/cslab.html
+++ b/cslab.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    !-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-0">
         <a class="navbar-brand" href="./index.html"> <img src="./images/primary_white.png" width="6%" height="auto" class="img-fluid" alt="Responsive Image">Berea College Computer Science Department</a>
 
@@ -53,7 +53,7 @@
             </ul>
         </div>
     </nav>
-    !-- Jumbotron for "2018 Fall TAs" -->
+    <!-- Jumbotron for "2018 Fall TAs" -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">2018 Fall TAs</h1>
