--- a/faculty.html
+++ b/faculty.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    !-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-0">
         <a class="navbar-brand" href="./index.html"> <img src="./images/primary_white.png" width="6%" height="auto" class="img-fluid" alt="Responsive Image">Berea College Computer Science Department</a>
 
