--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    !-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-0">
         <a class="navbar-brand" href="./index.html"> <img src="./images/primary_white.png" width="6%" height="auto" class="img-fluid" alt="Responsive Image">Berea College Computer Science Department</a>
 
@@ -54,13 +54,13 @@
         </div>
     </nav>
 
-    !-- Jumbotron for "The Latest & Greatest.." -->
+    <!-- Jumbotron for "The Latest & Greatest.." -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">The Latest & Greatest of Berea CS</h1>
         </div>
     </div>
-    !-- "Slideshow" -->
+    <!-- "Slideshow" -->
     <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    !-- List of Past Events and Upcoming events seperatd into rows and columns -->
+    <!-- List of Past Events and Upcoming events seperatd into rows and columns -->
     <div class="container">
         <div class="row">
             <div class="col-lg ">
